jenkins/ingress-coba.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-coba
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    external-dns.alpha.kubernetes.io/ttl: "1m"
  labels:
    type: ingress-coba
spec:
  rules:
  - host: jenkins.singorojo.my.id
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: jenkins
            port:
              number: 80
