jenkins/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/ttl: "1m"
  labels:
    type: jenkins
spec:
  tls:
  - hosts:
    - jenkins.singorojo.my.id
    secretName: jenkins-tls
  rules:
  - host: jenkins.singorojo.my.id
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: jenkins
            port:
              number: 80
